Fixed skills font color on Dark Mode & New Tab functionality added to the links plus privacy settings

--- a/style.css
+++ b/style.css
@@ -257,6 +257,10 @@ footer,
     position: relative;
 }
 
+.dark-theme .skills p {
+    color: #000000;
+}
+
 .btn-bg,
 .wrapper {
     width: 20rem;
